# sampling-chess

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_colab_phase2.ipynb  02_colab_sl_bot.ipynb
sampling_chess/: __init__.py  board.py  buffer.py  data.py  eval.py  iter_driver.py  log.py  mcts.py  net.py  pgx_bridge.py  sampling.py  sampling_pgx.py  search.py  selfplay.py  stockfish.py  train.py
scripts/: 00_smoke_random.py  01_benchmark_labeler.py  02_label_batch.py  03_sl_train.py  04_relabel_pgx.py  05_sl_train_pgx.py  06_compare_arms.py  07_selfplay_smoke.py  08_phase2_loop_smoke.py  09_phase2_full_smoke.py  10_download_data.py  11_play_vs_human.py  12_merge_labels.py  13_label_all_overnight.sh
tests/: test_board.py  test_buffer.py  test_data.py  test_eval.py  test_eval_pgx.py  test_iter_driver.py  test_log.py  test_mcts.py  test_net.py  test_net_pgx.py  test_pgx_bridge.py  test_sampling.py  test_sampling_pgx.py  test_sampling_pgx_jit.py  test_search.py  test_selfplay.py  test_stockfish.py  test_train.py  test_train_phase2.py
web/: Analyze.html  Annotate.html  Bottisme.html  Hub.html  README.md  analyze.jsx  annotate.jsx  app.jsx  engine.jsx  game.jsx  main.jsx  pieces.jsx  shared.jsx  styles.css
