[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sampling-chess"
version = "0.0.1"
description = "Chess bot trained via supervised learning on Stockfish-labeled positions"
requires-python = ">=3.10"
dependencies = [
  "chess>=1.11",
  "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.5",
]
# Heavy ML stack — install in Colab, not required for local data/eval dev.
ml = [
  "jax>=0.7",
  "flax>=0.11",
  "optax>=0.2",
  "wandb>=0.17",
]

[tool.setuptools.packages.find]
include = ["sampling_chess*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
